--- a/appspec.yml
+++ b/appspec.yml
@@ -1,18 +1,19 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
-    destination: /var/www/html/
+  - source: dist/my-angular-project
+    destination: /var/www/my-angular-project
+permissions:
+  - object: /var/www/my-angular-project
+    pattern: '**'
+    mode: '0755'
+    owner: root
+    group: root
+    type:
+      - file
+      - directory
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies
+  ApplicationStart:
+    - location: deploy-scripts/application-start-hook.sh
       timeout: 300
-      runas: root
-    - location: scripts/start_server
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server
-      timeout: 300
-      runas: root
-
+      
